Make score fields wider to prevent clipping with scores less than -99

--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ button[disabled] {
 }
 
 #score-board input[type=number] {
-  width: 66px;
+  width: 74px;
 }
 
 #score-board tr.game-complete input[type=number] {
